--- a/client/src/style.scss
+++ b/client/src/style.scss
@@ -1,6 +1,6 @@
-$primary-color: #753434 !default;
 @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@100;300;400;500;700;900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
+@import "primeicons/primeicons.css";
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
